--- a/20240408 klases.ipynb
+++ b/20240408 klases.ipynb
@@ -1613,6 +1613,327 @@
    "source": [
     "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vardas: Vardenis\n",
+      "Pavardė: Pavardenis\n",
+      "Vidurkis: 6.8\n",
+      "Didžiausias pažymys: 10\n",
+      "Mažiausias pažymys: 4\n",
+      "Vardas: Vardenis2\n",
+      "Pavardė: Pavardenis2\n",
+      "Vidurkis: 5.2\n",
+      "Didžiausias pažymys: 7\n",
+      "Mažiausias pažymys: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sukurkite Mokinys klasę, kuri turės mokinio vardą, pavardę ir sąrašą pažymių. Įtraukite metodus,\n",
+    "# kurie skaičiuotų vidurkį, didžiausią ir mažiausią pažymį.\n",
+    "\n",
+    "class Mokinys():\n",
+    "    def __init__(self, vardas, pavarde):\n",
+    "        self.V = vardas\n",
+    "        self.P = pavarde\n",
+    "        self.pazymiai = []\n",
+    "\n",
+    "    def getVidurkis(self):\n",
+    "        vidurkis = sum(self.pazymiai)/len(self.pazymiai)\n",
+    "        return vidurkis\n",
+    "    \n",
+    "    def getMax(self):\n",
+    "        pazymysMax = max(self.pazymiai)\n",
+    "        return pazymysMax\n",
+    "\n",
+    "    def getMin(self):\n",
+    "        pazymysMin = min(self.pazymiai)\n",
+    "        return pazymysMin\n",
+    "\n",
+    "mokinys1 = Mokinys(\"Vardenis\", \"Pavardenis\")\n",
+    "mokinys1.pazymiai = [4, 7, 10, 7, 6]\n",
+    "print(\"Vardas:\", mokinys1.V)\n",
+    "print(\"Pavardė:\", mokinys1.P)\n",
+    "print(\"Vidurkis:\", mokinys1.getVidurkis())\n",
+    "print(\"Didžiausias pažymys:\", mokinys1.getMax())\n",
+    "print(\"Mažiausias pažymys:\", mokinys1.getMin())\n",
+    "\n",
+    "mokinys2 = Mokinys(\"Vardenis2\", \"Pavardenis2\")\n",
+    "mokinys2.pazymiai = [1, 7, 5, 7, 6]\n",
+    "print(\"Vardas:\", mokinys2.V)\n",
+    "print(\"Pavardė:\", mokinys2.P)\n",
+    "print(\"Vidurkis:\", mokinys2.getVidurkis())\n",
+    "print(\"Didžiausias pažymys:\", mokinys2.getMax())\n",
+    "print(\"Mažiausias pažymys:\", mokinys2.getMin())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vardas: VardenisA1\n",
+      "Pavardė: PavardenisA1\n",
+      "Bendras pažymių ir egzaminų vidurkis: 6.166666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sukurkite Abiturientas klasę, kuri paveldi Mokinys klasę ir prideda papildomą funkcionalumą, pvz.,\n",
+    "# gebėjimą pridėti egzamino rezultatus ir skaičiuoti bendrą vidurkį, įskaitant ir egzamino rezultatus.\n",
+    "\n",
+    "# class Abiturientas(Mokinys):\n",
+    "#     def __init__(self, vardas, pavarde):\n",
+    "#         super().__init__(vardas, pavarde)\n",
+    "#         self.exRes = []\n",
+    "\n",
+    "#     def addExRes(self, Res):\n",
+    "#         self.exRes.append(Res)\n",
+    "\n",
+    "#     def getBendrasVid(self):\n",
+    "#         bendriPazymiai = self.pazymiai + self.exRes\n",
+    "#         bendrasVid = sum(bendriPazymiai)/len(bendriPazymiai)\n",
+    "#         return bendrasVid\n",
+    "\n",
+    "from modulis import Mokykla, Mokinys, Abiturientas\n",
+    "\n",
+    "abiturientas1 = Abiturientas(\"VardenisA1\", \"PavardenisA1\")\n",
+    "abiturientas1.pazymiai = [1, 5, 10, 8, 6]\n",
+    "abiturientas1.addExRes(7)\n",
+    "\n",
+    "print(\"Vardas:\", abiturientas1.V)\n",
+    "print(\"Pavardė:\", abiturientas1.P)\n",
+    "print(\"Bendras pažymių ir egzaminų vidurkis:\", abiturientas1.getBendrasVid())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Mokinys' object has no attribute 'pazymiai'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[29], line 29\u001b[0m\n\u001b[0;32m     26\u001b[0m mokykla\u001b[38;5;241m.\u001b[39maddMokinys(mokinys2)\n\u001b[0;32m     27\u001b[0m mokykla\u001b[38;5;241m.\u001b[39maddMokinys(mokinys3)\n\u001b[1;32m---> 29\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmokykla\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mVisuMokiniuVidurkis\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     31\u001b[0m \u001b[38;5;66;03m# extend alternatyva\u001b[39;00m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;66;03m# VisuMokiniuPazymiai = VisuMokiniuPazymiai + mokinys.pazymiai\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\rezav\\OneDrive\\Stalinis kompiuteris\\Duomenų mokslas\\JupyterNotebooksR\\modulis.py:166\u001b[0m, in \u001b[0;36mMokykla.VisuMokiniuVidurkis\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    164\u001b[0m VisuMokiniuPazymiai \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    165\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m mokinys \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mMokiniai:\n\u001b[1;32m--> 166\u001b[0m     VisuMokiniuPazymiai\u001b[38;5;241m.\u001b[39mextend(\u001b[43mmokinys\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpazymiai\u001b[49m) \u001b[38;5;66;03m# extend leidzia sujungti skirtingus sarasus, prisplecia sarasas, esantis pries extend metoda\u001b[39;00m\n\u001b[0;32m    167\u001b[0m VisuMokiniuVidurkis \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(VisuMokiniuPazymiai)\u001b[38;5;241m/\u001b[39m\u001b[38;5;28mlen\u001b[39m(VisuMokiniuPazymiai)\n\u001b[0;32m    168\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m VisuMokiniuVidurkis\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Mokinys' object has no attribute 'pazymiai'"
+     ]
+    }
+   ],
+   "source": [
+    "# Sukurkite Mokykla klasę, kuri turės sąrašą Mokinys objektų. Įtraukite metodus, kurie leistų pridėti\n",
+    "# naują mokinį, pašalinti mokinį, bei skaičiuoti visos mokyklos mokinių pažymių vidurkius.\n",
+    "\n",
+    "# class Mokykla():\n",
+    "#     def __init__(self):\n",
+    "#         self.Mokiniai = []\n",
+    "\n",
+    "#     def addMokinys(self, mokinys):\n",
+    "#         self.Mokiniai.append(mokinys)\n",
+    "\n",
+    "#     def removeMokinys(self, mokinys):\n",
+    "#         self.Mokiniai.remove(mokinys)\n",
+    "\n",
+    "#     def VisuMokiniuVidurkis(self):\n",
+    "#         VisuMokiniuPazymiai = []\n",
+    "#         for mokinys in self.Mokiniai:\n",
+    "#             VisuMokiniuPazymiai.extend(mokinys.pazymiai) # extend leidzia sujungti skirtingus sarasus, prisplecia sarasas, esantis pries extend metoda\n",
+    "#         VisuMokiniuVidurkis = sum(VisuMokiniuPazymiai)/len(VisuMokiniuPazymiai)\n",
+    "#         return VisuMokiniuVidurkis\n",
+    "\n",
+    "from modulis import Mokykla, Mokinys, Abiturientas\n",
+    "\n",
+    "mokykla = Mokykla()\n",
+    "mokinys3 = Mokinys('Vardenis3', 'Pavardenis3')\n",
+    "mokykla.addMokinys(mokinys1)\n",
+    "mokykla.addMokinys(mokinys2)\n",
+    "mokykla.addMokinys(mokinys3)\n",
+    "\n",
+    "print(mokykla.VisuMokiniuVidurkis())\n",
+    "\n",
+    "# extend alternatyva\n",
+    "# VisuMokiniuPazymiai = VisuMokiniuPazymiai + mokinys.pazymiai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vardas: Vardenis\n",
+      "Pavardė: Pavardenis\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 40\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVardas:\u001b[39m\u001b[38;5;124m\"\u001b[39m, mokinys1\u001b[38;5;241m.\u001b[39mV)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPavardė:\u001b[39m\u001b[38;5;124m\"\u001b[39m, mokinys1\u001b[38;5;241m.\u001b[39mP)\n\u001b[1;32m---> 40\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVidurkis:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mmokinys1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetVidurkis\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     41\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDidžiausias pažymys:\u001b[39m\u001b[38;5;124m\"\u001b[39m, mokinys1\u001b[38;5;241m.\u001b[39mgetMax())\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMažiausias pažymys:\u001b[39m\u001b[38;5;124m\"\u001b[39m, mokinys1\u001b[38;5;241m.\u001b[39mgetMin())\n",
+      "Cell \u001b[1;32mIn[25], line 16\u001b[0m, in \u001b[0;36mMokinys.getVidurkis\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgetVidurkis\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 16\u001b[0m     vidurkis \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__pazymiai\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__pazymiai\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m vidurkis\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "# Atnaujinkite Mokinys klasę taip, kad pažymių sąrašas būtų privatus. Sukurkite metodus, kurie\n",
+    "# leistų saugiai pridėti ir gauti pažymius, užtikrinant, kad negalima būtų pridėti netinkamų pažymių\n",
+    "# (pvz., neigiamų ar didesnių nei 10).\n",
+    "\n",
+    "# Klasės turi būti aprašytos jūsų kuriamame modulyje.\n",
+    "# Klases tikrinimui importuokite taip, kad \n",
+    "# NEREIKĖTŲ modulio pavadinimo prieš klasę naudoti.\n",
+    "\n",
+    "class Mokinys():\n",
+    "    def __init__(self, vardas, pavarde):\n",
+    "        self.V = vardas\n",
+    "        self.P = pavarde\n",
+    "        self.__pazymiai = []\n",
+    "\n",
+    "    def getVidurkis(self):\n",
+    "        vidurkis = sum(self.__pazymiai)/len(self.__pazymiai)\n",
+    "        return vidurkis\n",
+    "    \n",
+    "    def getMax(self):\n",
+    "        pazymysMax = max(self.__pazymiai)\n",
+    "        return pazymysMax\n",
+    "\n",
+    "    def getMin(self):\n",
+    "        pazymysMin = min(self.__pazymiai)\n",
+    "        return pazymysMin\n",
+    "    \n",
+    "    def addPaz(self, pazymys):\n",
+    "        if pazymys > 0 and pazymys <= 10:\n",
+    "            self.__pazymiai.append(pazymys)\n",
+    "\n",
+    "    def getPazymiai():\n",
+    "        return self.__pazymiai\n",
+    "\n",
+    "\n",
+    "\n",
+    "mokinys1 = Mokinys(\"Vardenis\", \"Pavardenis\")\n",
+    "mokinys1.self__pazymiai = [4, 7, 10, 7, 6]\n",
+    "print(\"Vardas:\", mokinys1.V)\n",
+    "print(\"Pavardė:\", mokinys1.P)\n",
+    "print(\"Vidurkis:\", mokinys1.getVidurkis())\n",
+    "print(\"Didžiausias pažymys:\", mokinys1.getMax())\n",
+    "print(\"Mažiausias pažymys:\", mokinys1.getMin())\n",
+    "\n",
+    "mokinys2 = Mokinys(\"Vardenis2\", \"Pavardenis2\")\n",
+    "mokinys2.self.__pazymiai = [1, 7, 5, 7, 6]\n",
+    "print(\"Vardas:\", mokinys2.V)\n",
+    "print(\"Pavardė:\", mokinys2.P)\n",
+    "print(\"Vidurkis:\", mokinys2.getVidurkis())\n",
+    "print(\"Didžiausias pažymys:\", mokinys2.getMax())\n",
+    "print(\"Mažiausias pažymys:\", mokinys2.getMin())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vardas: Vardenis\n",
+      "Pavardė: Pavardenis\n",
+      "Vidurkis: 6.8\n",
+      "Didžiausias pažymys: 10\n",
+      "Mažiausias pažymys: 4\n",
+      "Visi pažymiai: [4, 7, 10, 7, 6]\n",
+      "Vardas: Vardenis2\n",
+      "Pavardė: Pavardenis2\n",
+      "Vidurkis: 5.2\n",
+      "Didžiausias pažymys: 7\n",
+      "Mažiausias pažymys: 1\n",
+      "Visi pažymiai: [1, 7, 5, 7, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# class Mokinys():\n",
+    "#     def __init__(self, vardas, pavarde):\n",
+    "#         self.V = vardas\n",
+    "#         self.P = pavarde\n",
+    "#         self.__pazymiai = []\n",
+    "\n",
+    "#     def getVidurkis(self):\n",
+    "#         vidurkis = sum(self.__pazymiai)/len(self.__pazymiai)\n",
+    "#         return vidurkis\n",
+    "    \n",
+    "#     def getMax(self): \n",
+    "#         pazymysMax = max(self.__pazymiai)\n",
+    "#         return pazymysMax\n",
+    "\n",
+    "#     def getMin(self):\n",
+    "#         pazymysMin = min(self.__pazymiai)\n",
+    "#         return pazymysMin\n",
+    "    \n",
+    "#     def addPaz(self, pazymys):\n",
+    "#         if pazymys > 0 and pazymys <= 10:\n",
+    "#             self.__pazymiai.append(pazymys)\n",
+    "\n",
+    "#     def getPazymiai(self):\n",
+    "#         return self.__pazymiai\n",
+    "\n",
+    "from modulis import Mokykla, Mokinys, Abiturientas\n",
+    "mokinys1 = Mokinys(\"Vardenis\", \"Pavardenis\")\n",
+    "mokinys1.addPaz(4)\n",
+    "mokinys1.addPaz(7)\n",
+    "mokinys1.addPaz(10)\n",
+    "mokinys1.addPaz(7)\n",
+    "mokinys1.addPaz(6)\n",
+    "print(\"Vardas:\", mokinys1.V)\n",
+    "print(\"Pavardė:\", mokinys1.P)\n",
+    "print(\"Vidurkis:\", mokinys1.getVidurkis())\n",
+    "print(\"Didžiausias pažymys:\", mokinys1.getMax())\n",
+    "print(\"Mažiausias pažymys:\", mokinys1.getMin())\n",
+    "print(\"Visi pažymiai:\", mokinys1.getPazymiai())\n",
+    "\n",
+    "mokinys2 = Mokinys(\"Vardenis2\", \"Pavardenis2\")\n",
+    "mokinys2.addPaz(1)\n",
+    "mokinys2.addPaz(7)\n",
+    "mokinys2.addPaz(5)\n",
+    "mokinys2.addPaz(7)\n",
+    "mokinys2.addPaz(6)\n",
+    "print(\"Vardas:\", mokinys2.V)\n",
+    "print(\"Pavardė:\", mokinys2.P)\n",
+    "print(\"Vidurkis:\", mokinys2.getVidurkis())\n",
+    "print(\"Didžiausias pažymys:\", mokinys2.getMax())\n",
+    "print(\"Mažiausias pažymys:\", mokinys2.getMin())\n",
+    "print(\"Visi pažymiai:\", mokinys2.getPazymiai())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
