--- a/20240419 darbai1.ipynb
+++ b/20240419 darbai1.ipynb
@@ -1052,11 +1052,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "def pirminis(sk):\n",
+    "    if sk <= 1:\n",
+    "        return False\n",
+    "    for e in range(2, sk):\n",
+    "        if sk % e == 0:\n",
+    "            return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "pirminis(2)\n"
    ]
   }
  ],
